src/styles/main.css
/* ... */
  @media only screen and (max-width: 1220px) {
    .community-feed-container {
      width: 85%; } }
  @media only screen and (max-width: 1000px) {
    .community-feed-container {
      width: 100%; } }
  .community-feed-container .flexContainer {
    display: flex;
    flex-direction: row;
    justify-content: space-around; }
    .community-feed-container .flexContainer .feed {
      width: 60%;
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      align-items: center;
      transition: all 0.5s ease; }
      @media only screen and (max-width: 1000px) {
        .community-feed-container .flexContainer .feed {
          width: 55%; } }
      @media only screen and (max-width: 560px) {
        .community-feed-container .flexContainer .feed {
          width: 85%; } }
    .community-feed-container .flexContainer .postForm {
      display: flex;
      margin: 40px 0 0;
      width: 100%;
      margin-bottom: 40px; }
      .community-feed-container .flexContainer .postForm textarea {
        resize: none;
        background: #e6e8e6;
        font-size: 18px;
        height: 20px;
        padding: 10px;
        border: none;
        outline: none;
        width: 100%;
        border-radius: 5px 0 0 5px; }
        .community-feed-container .flexContainer .postForm textarea::-webkit-input-placeholder {
          color: #4F4F4F;
          font-size: 18px; }
        .community-feed-container .flexContainer .postForm textarea::-moz-placeholder {
          color: #4F4F4F;
          font-size: 18px; }
        .community-feed-container .flexContainer .postForm textarea:-moz-placeholder {
          color: #4F4F4F;
          font-size: 18px; }
        .community-feed-container .flexContainer .postForm textarea:-ms-input-placeholder {
          color: #4F4F4F;
          font-size: 18px; }
      .community-feed-container .flexContainer .postForm .askBtn {
        border-radius: 0 5px 5px 0;
        width: 100px;
        border: none;
        outline: none;
        height: 41px;
        margin: 0;
        padding: 0;
        font-family: "Raleway", sans-serif;
        font-size: 1em; }
        .community-feed-container .flexContainer .postForm .askBtn:hover {
          background: #AAEFDF;
          color: white; }
    .community-feed-container .flexContainer .commPost {
      display: flex;
      flex-direction: column;
      box-sizing: border-box;
      background: #ffffff;
      border-left: 10px solid #AAEFDF;
      padding: 15px 10px;
      width: 100%;
      box-shadow: 0px 0px 5px 0px #ced0ce;
      border-radius: 5px;
      margin-bottom: 20px; }
      .community-feed-container .flexContainer .commPost .postContainer {
        box-sizing: border-box;
        display: flex;
        justify-content: space-between;
        margin-bottom: 15px; }
        .community-feed-container .flexContainer .commPost .postContainer .questioner-img {
          align-self: center;
          border-radius: 5px;
          width: 50px;
          height: 50px; }
        .community-feed-container .flexContainer .commPost .postContainer .question {
          width: 60%;
          color: #4F4F4F;
          align-self: center; }
        .community-feed-container .flexContainer .commPost .postContainer .like-container {
          display: flex;
          flex-direction: column; }
          .community-feed-container .flexContainer .commPost .postContainer .like-container .likeAmount {
            align-self: flex-end; }
          .community-feed-container .flexContainer .commPost .postContainer .like-container img.like {
            align-self: flex-end;
            width: 25px;
            height: 25px;
            border-radius: 5px;
            margin-bottom: 10px; }
            .community-feed-container .flexContainer .commPost .postContainer .like-container img.like:hover {
              background: #AAEFDF;
              cursor: pointer; }
      .community-feed-container .flexContainer .commPost .postInfoContainer {
        display: flex;
        justify-content: space-between;
        margin-bottom: 15px; }
        .community-feed-container .flexContainer .commPost .postInfoContainer h1 {
          font-weight: bold; }
      .community-feed-container .flexContainer .commPost .responsesContainer {
        box-sizing: border-box; }
        .community-feed-container .flexContainer .commPost .responsesContainer .response {
          display: flex;
          justify-content: flex-start;
          box-sizing: border-box;
          margin-bottom: 15px;
          width: 100%;
          background: #e6e8e6;
          border-radius: 5px;
          color: dimgray;
          padding: 10px; }
          .community-feed-container .flexContainer .commPost .responsesContainer .response .commenter-photo {
            height: 40px;
            border-radius: 5px;
            border: 2px solid #4F4F4F;
            align-self: center; }
          .community-feed-container .flexContainer .commPost .responsesContainer .response .comment {
            align-self: center; }
          .community-feed-container .flexContainer .commPost .responsesContainer .response .comment-container {
            display: flex;
            flex-direction: column;
            justify-content: center; }
            .community-feed-container .flexContainer .commPost .responsesContainer .response .comment-container .commenter-name {
              margin: 15px 10px;
              font-size: 14px;
              font-weight: bold;
              color: #191919; }
            .community-feed-container .flexContainer .commPost .responsesContainer .response .comment-container .comment-data {
              align-self: flex-start;
              display: flex;
              justify-content: flex-end;
              flex-direction: row;
              margin: 10px 0 0 10px; }
/* ... */

